--- a/known_issues.json
+++ b/known_issues.json
@@ -1,6 +1,122 @@
 [
     {
+        "test_name": "REG-753 CheckSubjectObject (Моки) Запрос на вызов проверки субъекта/объекта ЮЛ (Type = «Organization») (Errors. Code=0).",
+        "bug": "DEF-5595, DEF-5596"
+    },
+    {
+        "test_name": "REG-753 CheckSubjectObject (Моки) Запрос на вызов проверки субъекта/объекта ЮЛ (Type = «Organization») (Errors. Code=1) (Невалидный Method)",
+        "bug": "DEF-5545"
+    },
+    {
+        "test_name": "REG-753 CheckSubjectObject (Моки) Запрос на вызов проверки субъекта/объекта ЮЛ (Type = «Organization2») (Errors. Code=1) (Невалидный Type)",
+        "bug": "DEF-5545"
+    },
+    {
+        "test_name": "REG-753 CheckSubjectObject (Моки) Запрос на вызов проверки субъекта/объекта ФЛ (Type = «Person») (Errors. Code=0).",
+        "bug": "DEF-5595, DEF-5596"
+    },
+    {
+        "test_name": "REG-753 CheckSubjectObject (Моки) Запрос на вызов проверки субъекта/объекта ТС (Type = «Vehicle») (Errors. Code=0).",
+        "bug": "DEF-5595, DEF-5596"
+    },
+    {
+        "test_name": "Проверить заполнение ответа при успешной загрузке проекта договора ОСАГО/eОСАГО (Type=DraftContractForClosing) (Errors.Code=0)",
+        "bug": "DEF-5584"
+    },
+    {
+        "test_name": "Проверить заполнение ответа при указании невалидного значения атрибута Method (Errors.Code=1)",
+        "bug": "DEF-5548"
+    },
+    {
+        "test_name": "Проверить заполнение ответа при указании невалидного значения атрибута Type (Errors.Code=1)",
+        "bug": "DEF-5548"
+    },
+    {
+        "test_name": "Проверить заполнение ответа при успешной загрузке заключенного договора ОСАГО (Type = BSO) (Errors.Code=0)",
+        "bug": "DEF-5584"
+    },
+    {
+        "test_name": "Проверить заполнение ответа при успешной загрузке заключенного доп.соглашения ОСАГО/eОСАГО (Type=BSOAddendum) (Errors.Code=0)",
+        "bug": "DEF-5584"
+    },
+    {
+        "test_name": "Проверить заполнение ответа при успешной загрузке проекта доп.соглашения ОСАГО/eОСАГО (Type=DraftAddendum) (Errors.Code=0)",
+        "bug": "DEF-5584"
+    },
+    {
+        "test_name": "REG-583, REG-820 КБМ Проверить заполнение ответа при успешном выполнении запроса КБМ по 1 ФЛ (Errors.Code=0)",
+        "bug": "DEF-5550"
+    },
+    {
+        "test_name": "REG-583, REG-820 КБМ Проверить заполнение ответа при успешном выполнении запроса КБМ по 2 ФЛ (Errors.Code=0)",
+        "bug": "DEF-5550"
+    },
+    {
+        "test_name": "REG-583, REG-820 КБМ Проверить заполнение ответа при успешном выполнении запроса КБМ по 1 ЮЛ (Errors.Code=0)",
+        "bug": "DEF-5551"
+    },
+    {
+        "test_name": "REG-583, REG-820 КБМ Проверить заполнение ответа при указании невалидного значения атрибута Method (Errors.Code=1)",
+        "bug": "DEF-5593"
+    },
+    {
+        "test_name": "REG-583, REG-820 КБМ Проверить заполнение ответа при указании невалидного значения атрибута Type (Errors.Code=1)",
+        "bug": "DEF-5593"
+    },
+    {
+        "test_name": "REG-827, REG-964 GetEgarantPolicies Е-Гарант полисы Проверить заполнение ответа при указании невалидного значения атрибута Method (Errors.Code=1)",
+        "bug": "DEF-5553, DEF-5591"
+    },
+    {
+        "test_name": "REG-827, REG-964 Е-Гарант полисы GetEgarantPolicy Проверить заполнение ответа при указании невалидного значения атрибута Method (Errors.Code=1)",
+        "bug": "DEF-5553, DEF-5591"
+    },
+    {
+        "test_name": "REG-772 AccrualDate Загрузка даты начисления/возврата страховой премии (доп.соглашения)",
+        "bug": "DEF-5579"
+    },
+    {
         "test_name": "REG-772 AccrualDate Загрузка даты начисления/возврата страховой премии (доп.соглашения) при указании невалидного значения атрибута Method (Errors.Code=1)",
-        "bug": "REG-2828"
+        "bug": "DEF-5594"
+    },
+    {
+        "test_name": "REG-772 AccrualDate Загрузка даты начисления/возврата страховой премии (доп.соглашения) при указании невалидного значения атрибута Type (Errors.Code=1)",
+        "bug": "DEF-5594"
+    },
+    {
+        "test_name": "REG-772 AccrualDate Загрузка даты начисления/возврата страховой премии (договора)",
+        "bug": "DEF-5579"
+    },
+    {
+        "test_name": "REG-772 Загрузка даты начисления/возврата страховой премии (договора) при указании невалидного значения атрибута Method (Errors.Code=1)",
+        "bug": "DEF-5594"
+    },
+    {
+        "test_name": "REG-772 AccrualDate Загрузка даты начисления/возврата страховой премии (договора) при указании невалидного значения атрибута Type (Errors.Code=1)",
+        "bug": "DEF-5594"
+    },
+    {
+        "test_name": "Проверить заполнение ответа при успешном вызове запроса на изменение статуса договора ОСАГО и еОСАГО (Type = Contract) (Errors.Code=0)",
+        "bug": "DEF-5582, DEF-5583"
+    },
+    {
+        "test_name": "Проверить заполнение ответа при указании невалидиного значения атрибута Method (Errors.Code=1)",
+        "bug": "DEF-5580"
+    },
+    {
+        "test_name": "Проверить заполнение ответа при указании невалидиного значения атрибута Type (Errors.Code=1)",
+        "bug": "DEF-5580"
+    },
+    {
+        "test_name": "Проверить заполнение ответа при успешном вызове запроса на изменение статуса доп соглашения ОСАГО и еОСАГО (Type = Addendum) (Errors.Code=0)",
+        "bug": "DEF-5582, DEF-5583"
+    },
+    {
+        "test_name": "Проверить заполнение ответа при указании невалидиного значения атрибута Method (Errors.Code=1)",
+        "bug": "DEF-5580"
+    },
+    {
+        "test_name": "Проверить заполнение ответа при указании невалидиного значения атрибута Type (Errors.Code=1)",
+        "bug": "DEF-5580"
     }
 ]
