--- a/known_issues.json
+++ b/known_issues.json
@@ -20,27 +20,27 @@
         "bug": "DEF-5595, DEF-5596"
     },
     {
-        "test_name": "Проверить заполнение ответа при успешной загрузке проекта договора ОСАГО/eОСАГО (Type=DraftContractForClosing) (Errors.Code=0)",
+        "test_name": "REG-578 Проверить заполнение ответа при успешной загрузке проекта договора ОСАГО/eОСАГО (Type=DraftContractForClosing) (Errors.Code=0)",
         "bug": "DEF-5584"
     },
     {
-        "test_name": "Проверить заполнение ответа при указании невалидного значения атрибута Method (Errors.Code=1)",
+        "test_name": "REG-578 Проверить заполнение ответа при указании невалидного значения атрибута Method (Errors.Code=1)",
         "bug": "DEF-5548"
     },
     {
-        "test_name": "Проверить заполнение ответа при указании невалидного значения атрибута Type (Errors.Code=1)",
+        "test_name": "REG-578 Проверить заполнение ответа при указании невалидного значения атрибута Type (Errors.Code=1)",
         "bug": "DEF-5548"
     },
     {
-        "test_name": "Проверить заполнение ответа при успешной загрузке заключенного договора ОСАГО (Type = BSO) (Errors.Code=0)",
+        "test_name": "REG-578 Проверить заполнение ответа при успешной загрузке заключенного договора ОСАГО (Type = BSO) (Errors.Code=0)",
         "bug": "DEF-5584"
     },
     {
-        "test_name": "Проверить заполнение ответа при успешной загрузке заключенного доп.соглашения ОСАГО/eОСАГО (Type=BSOAddendum) (Errors.Code=0)",
+        "test_name": "REG-578 Проверить заполнение ответа при успешной загрузке заключенного доп.соглашения ОСАГО/eОСАГО (Type=BSOAddendum) (Errors.Code=0)",
         "bug": "DEF-5584"
     },
     {
-        "test_name": "Проверить заполнение ответа при успешной загрузке проекта доп.соглашения ОСАГО/eОСАГО (Type=DraftAddendum) (Errors.Code=0)",
+        "test_name": "REG-578 Проверить заполнение ответа при успешной загрузке проекта доп.соглашения ОСАГО/eОСАГО (Type=DraftAddendum) (Errors.Code=0)",
         "bug": "DEF-5584"
     },
     {
@@ -96,27 +96,27 @@
         "bug": "DEF-5594"
     },
     {
-        "test_name": "Проверить заполнение ответа при успешном вызове запроса на изменение статуса договора ОСАГО и еОСАГО (Type = Contract) (Errors.Code=0)",
+        "test_name": "REG-783 Проверить заполнение ответа при успешном вызове запроса на изменение статуса договора ОСАГО и еОСАГО (Type = Contract) (Errors.Code=0)",
         "bug": "DEF-5582, DEF-5583"
     },
     {
-        "test_name": "Проверить заполнение ответа при указании невалидиного значения атрибута Method (Errors.Code=1)",
+        "test_name": "REG-783 Проверить заполнение ответа при указании невалидиного значения атрибута Method (Errors.Code=1)",
         "bug": "DEF-5580"
     },
     {
-        "test_name": "Проверить заполнение ответа при указании невалидиного значения атрибута Type (Errors.Code=1)",
+        "test_name": "REG-783 Проверить заполнение ответа при указании невалидиного значения атрибута Type (Errors.Code=1)",
         "bug": "DEF-5580"
     },
     {
-        "test_name": "Проверить заполнение ответа при успешном вызове запроса на изменение статуса доп соглашения ОСАГО и еОСАГО (Type = Addendum) (Errors.Code=0)",
+        "test_name": "REG-783 Проверить заполнение ответа при успешном вызове запроса на изменение статуса доп соглашения ОСАГО и еОСАГО (Type = Addendum) (Errors.Code=0)",
         "bug": "DEF-5582, DEF-5583"
     },
     {
-        "test_name": "Проверить заполнение ответа при указании невалидиного значения атрибута Method (Errors.Code=1)",
+        "test_name": "REG-783 Проверить заполнение ответа при указании невалидиного значения атрибута Method (Errors.Code=1)",
         "bug": "DEF-5580"
     },
     {
-        "test_name": "Проверить заполнение ответа при указании невалидиного значения атрибута Type (Errors.Code=1)",
+        "test_name": "REG-783 Проверить заполнение ответа при указании невалидиного значения атрибута Type (Errors.Code=1)",
         "bug": "DEF-5580"
     }
 ]
